# mrboto

./: .gitignore  .gitmodules  CLAUDE.md  MRUBY_GEMS_ANDROID.md  README.md  README.zh.md  build-android.sh  build.gradle.kts  build_config.rb  gradlew  gradlew.bat  hello.rb  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hello.mrb
app/src/main/cpp/: CMakeLists.txt  android-jni-bridge.c  android-jni-bridge.h  jni-bindings.c  jni-features.h  jni-helpers.c  jni-helpers.h  jni-registry.c  jni-registry.h  jni-ui.c  jni-ui.h  native-lib.c
app/src/main/cpp/mruby/include/mruby/presym/: id.h  table.h
com/kyant/backdrop/backdrops/: CanvasBackdrop.kt
demo/: build.gradle.kts
demo/src/main/: AndroidManifest.xml
demo/src/main/assets/: arithmetic.mrb  arrays.mrb  fibonacci.mrb  hashes.mrb  main_activity.rb  multi_eval.mrb  runtime_error.mrb  strings.mrb  syntax_error.rb
demo/src/main/ruby/: runtime_error.rb  strings.rb
docs/: camera_demo_implementation_plan.md  compose-dsl.md
editor/: build.gradle.kts
editor/src/main/: AndroidManifest.xml
editor/src/main/assets/: editor_activity.rb
executor/: build.gradle.kts
executor/src/main/: AndroidManifest.xml
executor/src/main/assets/: arithmetic.rb  arrays.rb  fibonacci.rb  hashes.rb  multi_eval.rb  ruby_executor.rb
qr_demo/: build.gradle.kts
qr_demo/src/main/: AndroidManifest.xml
showcase/: build.gradle.kts  proguard-rules.pro
showcase/src/main/: AndroidManifest.xml
(+123 files in other folders)
